Initial portal implementation Added Activate command Added Ready command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ add_compile_definitions(WIFI_PASSWORD=\"${WIFI_PASSWORD}\")
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(PicoWPortal Main.cpp DeviceDescriptor.cpp USBDevice.cpp)
+add_executable(PicoWPortal Main.cpp DeviceDescriptor.cpp USBDevice.cpp Portal.cpp)
 
 pico_set_program_name(PicoWPortal "PicoWPortal")
 pico_set_program_version(PicoWPortal "0.1")
