--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ add_compile_definitions(WIFI_PASSWORD=\"${WIFI_PASSWORD}\")
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(PicoWPortal Main.cpp DeviceDescriptor.cpp USBDevice.cpp Portal.cpp)
+add_executable(PicoWPortal src/Main.cpp src/DeviceDescriptor.cpp src/Portal.cpp src/USBDevice.cpp)
 
 pico_set_program_name(PicoWPortal "PicoWPortal")
 pico_set_program_version(PicoWPortal "0.1")
@@ -46,7 +46,7 @@ target_link_libraries(PicoWPortal
 # Add the standard include files to the build
 target_include_directories(PicoWPortal PRIVATE
   ${CMAKE_CURRENT_LIST_DIR}
-  ${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts or any other standard includes, if required
+  ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
 # Add any user requested libraries
